--- a/style.css
+++ b/style.css
@@ -6836,6 +6836,7 @@ body {
   font-family: "Open Sans", Verdana, Helvetica;
   font-size: 35px;
   color: #010101;
+  font-weight: 700;
 }
 #navigation-menu {
   margin-top: 15px;
